--- a/gb/18/10/15/n10784354.md
+++ b/gb/18/10/15/n10784354.md
@@ -1,16 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pnimea3269/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pnimea3269/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/pnimea3269/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pnimea3269/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/pnimea3269/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pnimea3269/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/pnimea3269/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pnimea3269/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/pnimea3269/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pnimea3269/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/pnimea3269/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pnimea3269/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/pnimea3269/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pnimea3269/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/pnimea3269/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pnimea3269/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/pnimea3269/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pnimea3269/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/pnimea3269/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pnimea3269/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pnimea3269/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pnimea3269/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pnimea3269/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pnimea3269/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“体验天堂殊胜”神韵交响乐感动华府观众</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/10/1810141908531160-600x400.jpg" />
 <h6>10月14日，神韵交响乐团在美国华盛顿DC肯尼迪艺术中心音乐厅演出。（李莎／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2018年10月15日讯】（大纪元美国华盛顿DC记者站报导）您是否曾想像过，<ahref="https://github.com/pnimea3269/djy/blob/master/gb/tag/%E5%A4%A9%E5%A0%82.md#1">天堂</a>是怎样的景象？是如涓涓细流沁入心田的温馨，还是如太平盛世的安乐祥和，亦或者是一片无忧无虑的宁静乐土？也许，听过<ahref="https://github.com/pnimea3269/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a><ahref="https://github.com/pnimea3269/djy/blob/master/gb/tag/%E4%BA%A4%E5%93%8D%E4%B9%90.md#1">交响乐</a>会的观众能够告诉您答案。</p>
-<figure id="attachment_10784465" aria-describedby="caption-attachment-10784465" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/1810141908231160.jpg"><img class="wp-image-10784465 size-large" src="https://i.epochtimes.com/assets/uploads/2018/10/1810141908231160-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-10784465" class="wp-caption-text">小提琴演奏家郑媛慧。（李莎／大纪元）</figcaption></figure>
+	<p>【大纪元2018年10月15日讯】（大纪元美国华盛顿DC记者站报导）您是否曾想像过，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A4%A9%E5%A0%82.md#1">天堂</a>是怎样的景象？是如涓涓细流沁入心田的温馨，还是如太平盛世的安乐祥和，亦或者是一片无忧无虑的宁静乐土？也许，听过<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BA%A4%E5%93%8D%E4%B9%90.md#1">交响乐</a>会的观众能够告诉您答案。</p>
 <figure id="attachment_10784467" aria-describedby="caption-attachment-10784467" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/1810141908331160.jpg"><img class="wp-image-10784467 size-large" src="https://i.epochtimes.com/assets/uploads/2018/10/1810141908331160-600x377.jpg" alt="" width="600" b="377" /></a><figcaption id="caption-attachment-10784467" class="wp-caption-text">二胡演奏家戚晓春（第一排右）、王真（中）、于小航。（李莎／大纪元）</figcaption></figure>
 <figure id="attachment_10784468" aria-describedby="caption-attachment-10784468" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/1810141939441160.jpg"><img class="wp-image-10784468 size-large" src="https://i.epochtimes.com/assets/uploads/2018/10/1810141939441160-600x376.jpg" alt="" width="600" b="376" /></a><figcaption id="caption-attachment-10784468" class="wp-caption-text">女高音歌唱家耿皓蓝。（李莎／大纪元）</figcaption></figure>
-<p>10月14日下午，<ahref="https://github.com/pnimea3269/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a><ahref="https://github.com/pnimea3269/djy/blob/master/gb/tag/%E4%BA%A4%E5%93%8D%E4%B9%90.md#1">交响乐</a>团在美国<ahref="https://github.com/pnimea3269/djy/blob/master/gb/tag/%E5%8D%8E%E7%9B%9B%E9%A1%BFdc%E8%82%AF%E5%B0%BC%E8%BF%AA%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">华盛顿DC肯尼迪艺术中心</a>的演出，为华府观众带来深深感动，他们体会到了“在<ahref="https://github.com/pnimea3269/djy/blob/master/gb/tag/%E5%A4%A9%E5%A0%82.md#1">天堂</a>一样”的感觉。</p>
+<p>10月14日下午，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BA%A4%E5%93%8D%E4%B9%90.md#1">交响乐</a>团在美国<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8D%8E%E7%9B%9B%E9%A1%BFdc%E8%82%AF%E5%B0%BC%E8%BF%AA%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">华盛顿DC肯尼迪艺术中心</a>的演出，为华府观众带来深深感动，他们体会到了“在<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A4%A9%E5%A0%82.md#1">天堂</a>一样”的感觉。</p>
 <h2>境界升华 体验天堂般的美好</h2>
 <figure id="attachment_10784368" aria-describedby="caption-attachment-10784368" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/1810142019291160.jpg"><img class="wp-image-10784368 size-medium" src="https://i.epochtimes.com/assets/uploads/2018/10/1810142019291160-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-10784368" class="wp-caption-text">美国国会议员达纳?罗拉巴克（Dana Rohrabacher）的副幕僚长Paul Behrends说，欣赏神韵交响乐让他感觉像在天堂一样。（新唐人电视台）</figcaption></figure>
 <p>“太美好了，就像是在天堂一样。能欣赏到这样的音乐，真是令人感动。音乐家们才华过人，令人感觉特别开心。”美国国会议员达纳?罗拉巴克（Dana Rohrabacher）的副幕僚长Paul Behrends不住地赞叹道：“我再说一次，真的像是到了天堂，非常好的感觉。音乐家真是特别、特别有才华。这是最棒的！”</p>
@@ -27,7 +26,7 @@
 <p>“他们刚一开始演奏，就让我惊叹不已，非常感动，真的很感动，（聆听神韵交响乐）是一次美好的经历，我非常感激。”病理学家Christa Claflin女士分享感受时眼睛里仍泛着泪花。她说，每天都想听到这样的音乐。</p>
 <p>公司老板Ezra Smith表示，聆听神韵交响乐令他想起童年， 不禁感动落泪。</p>
 <p>“神韵音乐非常独特，真正地展现了中国历史以及文化的意蕴，这也是我要来现场听神韵的原因。”Smith说，“今天的音乐，不是你在其它地方所能听到的。这是一种独特的交汇，我非常喜爱神韵音乐！”</p>
-<figure id="attachment_10784034" aria-describedby="caption-attachment-10784034" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/1810141954491160.jpg"><img class="wp-image-10784034 size-medium" title="公司业主落泪 ：神韵音乐让我忆起童年" src="https://i.epochtimes.com/assets/uploads/2018/10/1810141954491160-450x338.jpg" alt="公司业主落泪 ：神韵音乐让我忆起童年" width="450" b="338" /></a><figcaption id="caption-attachment-10784034" class="wp-caption-text">10月14日，公司业主Ezra Smith和未婚妻一起观看了美国神韵交响乐团在<ahref="https://github.com/pnimea3269/djy/blob/master/gb/tag/%E5%8D%8E%E7%9B%9B%E9%A1%BFdc%E8%82%AF%E5%B0%BC%E8%BF%AA%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">华盛顿DC肯尼迪艺术中心</a>音乐厅的演出。（李辰／大纪元）</figcaption></figure>
+<figure id="attachment_10784034" aria-describedby="caption-attachment-10784034" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/1810141954491160.jpg"><img class="wp-image-10784034 size-medium" title="公司业主落泪 ：神韵音乐让我忆起童年" src="https://i.epochtimes.com/assets/uploads/2018/10/1810141954491160-450x338.jpg" alt="公司业主落泪 ：神韵音乐让我忆起童年" width="450" b="338" /></a><figcaption id="caption-attachment-10784034" class="wp-caption-text">10月14日，公司业主Ezra Smith和未婚妻一起观看了美国神韵交响乐团在<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8D%8E%E7%9B%9B%E9%A1%BFdc%E8%82%AF%E5%B0%BC%E8%BF%AA%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83.md#1">华盛顿DC肯尼迪艺术中心</a>音乐厅的演出。（李辰／大纪元）</figcaption></figure>
 <h2>融贯东西 音乐承载文化内涵</h2>
 <figure id="attachment_10784384" aria-describedby="caption-attachment-10784384" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/1810141955111160.jpg"><img class="wp-image-10784384 size-medium" src="https://i.epochtimes.com/assets/uploads/2018/10/1810141955111160-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-10784384" class="wp-caption-text">在国际货币基金组织担任顾问的Luis Cortavarrin先生听说了神韵之后，他就决定不能错过这场演出。（Holly Kellum／大纪元）</figcaption></figure>
 <p>在国际货币基金组织担任顾问的Luis Cortavarrin先生很喜欢音乐。耳闻神韵交响乐后他做了一番“功课”，立即就决定要来看演出，“我跟自己说，我一定不能错过。”</p>
@@ -46,43 +45,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pnimea3269/djy/blob/master/gb/18/10/13/n10781946.md#1">公司总裁：神韵交响乐有安定人心的能量</a></li>
-<li><a href="https://github.com/pnimea3269/djy/blob/master/gb/18/10/13/n10781980.md#1">机构主管赞神韵乐器结合巧妙 令其心神宁静</a></li>
-<li><a href="https://github.com/pnimea3269/djy/blob/master/gb/18/10/13/n10782017.md#1">神韵震撼医院主任夫妇：让人精力充沛、觉醒</a></li>
-<li><a href="https://github.com/pnimea3269/djy/blob/master/gb/18/10/14/n10782133.md#1">神韵音乐中西结合能量强 董事长大开眼界</a></li>
-<li><a href="https://github.com/pnimea3269/djy/blob/master/gb/18/10/14/n10782161.md#1">“世界一流” 神韵交响乐感动波士顿观众</a></li>
-<li><a href="https://github.com/pnimea3269/djy/blob/master/gb/18/10/14/n10782320.md#1">中西音乐完美融合 作家大开眼界</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/13/n10781946.md#1">公司总裁：神韵交响乐有安定人心的能量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/13/n10781980.md#1">机构主管赞神韵乐器结合巧妙 令其心神宁静</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/13/n10782017.md#1">神韵震撼医院主任夫妇：让人精力充沛、觉醒</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/14/n10782133.md#1">神韵音乐中西结合能量强 董事长大开眼界</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/14/n10782161.md#1">“世界一流” 神韵交响乐感动波士顿观众</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/14/n10782320.md#1">中西音乐完美融合 作家大开眼界</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/pnimea3269/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11403580.md#1" target="_blank">共产暴政录：盛世才与国共两党的新疆分裂争夺战</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11210435.md#1" target="_blank">“4.25”那天我们一家人站在府右街上</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/25/n10427499.md#1" target="_blank">严家伟：文革中的监狱往事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/20/n8510885.md#1" target="_blank">哈尔滨一位大学教师17年的坚持</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/3/n12920672.md#1">目击30公分高外星人走出UFO 玻国居民惊呆</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/4/26/n12906271.md#1">麦克阿瑟的巅峰之战──仁川登陆战</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/4/n12924345.md#1">【未解之谜】五台山之谜：清凉胜地的秘密</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/4/19/n12890234.md#1">日食及沙罗周期天象预言：中共生与灭</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/4/n12923727.md#1">儿子发狂与富家子败家皆有前因 结恶缘必尝恶果</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/7/n12932152.md#1">【秦鹏直播】美中激辩联合国 美抗共朋友圈形成</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/7/n12932045.md#1">【有冇搞错】中共为何放过马化腾？</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/7/n12932199.md#1">车评：2.9秒的冲击 2021 Chevrolet Corvette Stingray 2LT</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/6/n12927345.md#1">嘲讽成龙？香港导演拍《鼠胆龙威》意外大卖</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/6/n12928250.md#1">美军追踪并公开长征火箭失控路线 中共羞恼</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/6/n12928354.md#1">“别学我 很危险”菲总统退回中共国药疫苗</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/6/n12927345.md#1">嘲讽成龙？香港导演拍《鼠胆龙威》意外大卖</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/6/n12929178.md#1">曾批刘德华不算歌手 杨坤商演现尴尬一幕</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/5/n12926809.md#1">外媒称台湾地表最危险 台湾女婿吴凤吐心声</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/6/n12929398.md#1">吃早餐巧遇周润发 港星徐荣直呼：终于轮到我</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/6/n12928435.md#1">小甜甜水肾剧痛送急诊 为保胎儿拒手术</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/6/n12928488.md#1">常喝绿茶的五大好处和两个副作用</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/7/n12929901.md#1">印度疫情何时到顶峰？七大问题一次看懂</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/4/28/n12909895.md#1">掉发、秃头 2种偏方有效吗？中医3招助生发</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/6/n12927468.md#1">飞蚊症能治愈？2碗药膳 告别眼睛老化和飞蚊</a></li>
-<li><a href="https://github.com/vwsqav3178/djy/blob/master/gb/21/5/4/n12922718.md#1">番茄防癌、减肥又增免疫力 这样吃最营养</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pnimea3269/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pnimea3269/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/15/n10784354.htm">“体验天堂殊胜”神韵交响乐感动华府观众</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/15/n10784354.htm">“体验天堂殊胜”神韵交响乐感动华府观众</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/pnimea3269/djy/blob/master/gb/18/10/15/n10784354.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pnimea3269/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pnimea3269/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pnimea3269/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pnimea3269/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pnimea3269/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/18/10/15/n10784354.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
